# willow2-mod-manager

./: .clang-format  .clang-tidy  .clangd  .cruft.json  .gitattributes  .gitignore  .gitmodules  .typos.toml  CMakeLists.txt  CMakePresets.json  Readme.md  changelog.md  linters.txt  manager_pyproject.toml  pick_release_name.py  prepare_release.py  pyproject.toml  setup.cfg
.devcontainer/: .gitignore  Dockerfile
.devcontainer/clang-cross/: devcontainer.json
.devcontainer/llvm-mingw/: devcontainer.json
.devcontainer/mingw/: devcontainer.json
.github/workflows/: build.yml
Mods/ModMenu/: MenuManager.py  NetworkManager.py  OptionManager.py
src/: __main__.py
src/console_mod_menu/: __init__.py  draw.py  key_matching.py  option_formatting.py
src/console_mod_menu/screens/: __init__.py  confirm.py  home.py  keybind.py  mod.py  option.py
src/keybinds/: __init__.py
src/legacy_compat/: __init__.py  eridiumlib_requests.py  meta_path_finder.py  source_replacements.py
src/legacy_compat/ModMenu/: DeprecationHelper.py  HookManager.py  KeybindManager.py  ModObjects.py  NetworkManager.py  Options.py  SettingsManager.py  __init__.py
src/mods_base/: __init__.py  command.py  dot_sdkmod.py  hook.py  html_to_plain_text.py  keybinds.py  mod.py  mod_factory.py  mod_list.py  options.py  raw_keybinds.py  settings.py
src/networking/: __init__.py  decorators.py  factory.py  message_queue.py  registration.py  transmission.py
src/save_options/: __init__.py  hooks.py  options.py  registration.py
src/ui_utils/: __init__.py  chat.py  clipboard.py  hud_message.py  online_message.py  option_box.py  reorder_box.py  training_box.py
src/willow2_mod_menu/: __init__.py  description.py  options_menu.py  outer_menu.py
src/willow_mod_menu/: favourites.py  options_menu.py  outer_menu.py
stubs/pyunrealsdk/: __init__.pyi
stubs/unrealsdk/: __init__.pyi
(+23 files in other folders)
